--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "backend nodejs challenge ",
   "main": "index.js",
   "scripts": {
-    "test": "jest", 
-    "dev": "node src/index.js"
+    "test": "jest",
+    "dev": "nodemon"
   },
   "author": "Mateo Villa",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "mongodb-memory-server": "^6.9.6",
+    "mongoose": "^5.12.9",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11"
   }
 }
