--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   "author": "Mateo Villa",
   "license": "ISC",
   "dependencies": {
+    "convert-csv-to-json": "^1.3.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.9",
+    "node-xlsx": "^0.16.1",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11"
+    "@types/express": "^4.17.11",
+    "@types/express-fileupload": "^1.1.6",
+    "@types/multer": "^1.4.5",
+    "@types/node-xlsx": "^0.15.1"
   }
 }
