--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend nodejs challenge ",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test:dev": "jest --watchAll --runInBand --detectOpenHandles",
     "dev": "nodemon"
   },
   "author": "Mateo Villa",
@@ -13,16 +13,20 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "jest": "^26.6.3",
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.9",
+    "node-mocks-http": "^1.10.1",
     "node-xlsx": "^0.16.1",
     "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
+    "@types/jest": "^26.0.23",
     "@types/multer": "^1.4.5",
     "@types/node-xlsx": "^0.15.1"
   }
